bk_ida/gccida/g1/reload_as_needed
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_as_needed/src/reload1.c:4308:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v28; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_as_needed/src/reload1.c:4311:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v31; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_as_needed/src/reload1.c:4312:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v32; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_as_needed/src/reload1.c:4360:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v80; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_as_needed/src/reload1.c:4517:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class class1; // [rsp+50h] [rbp-88h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_as_needed/src/reload1.c:4518:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class class1a; // [rsp+50h] [rbp-88h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_as_needed/src/reload1.c:4520:4: error: expected ';' after expression
rtx v240; // [rsp+58h] [rbp-80h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_as_needed/src/reload1.c:4520:5: error: use of undeclared identifier 'v240'
rtx v240; // [rsp+58h] [rbp-80h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_as_needed/src/reload1.c:4521:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type v241; // [rsp+58h] [rbp-80h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_as_needed/src/reload1.c:4522:4: error: expected ';' after expression
rtx arg0; // [rsp+60h] [rbp-78h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_as_needed/src/reload1.c:4522:5: error: use of undeclared identifier 'arg0'
rtx arg0; // [rsp+60h] [rbp-78h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_as_needed/src/reload1.c:4524:4: error: expected ';' after expression
rtx arg0a; // [rsp+60h] [rbp-78h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_as_needed/src/reload1.c:4524:5: error: use of undeclared identifier 'arg0a'; did you mean 'arg0c'?
rtx arg0a; // [rsp+60h] [rbp-78h] 
    ^~~~~
    arg0c
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_as_needed/src/reload1.c:4523:5: note: 'arg0c' declared here
int arg0c; // [rsp+60h] [rbp-78h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_as_needed/src/reload1.c:4527:4: error: expected ';' after expression
rtx ya; // [rsp+68h] [rbp-70h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_as_needed/src/reload1.c:4527:5: error: use of undeclared identifier 'ya'
rtx ya; // [rsp+68h] [rbp-70h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_as_needed/src/reload1.c:4528:4: error: expected ';' after expression
rtx yb; // [rsp+68h] [rbp-70h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_as_needed/src/reload1.c:4528:5: error: use of undeclared identifier 'yb'
rtx yb; // [rsp+68h] [rbp-70h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_as_needed/src/reload1.c:4529:4: error: expected ';' after expression
rtx next; // [rsp+70h] [rbp-68h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_as_needed/src/reload1.c:4529:5: error: use of undeclared identifier 'next'
rtx next; // [rsp+70h] [rbp-68h] 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_as_needed/src/obj/reload1.o] Error 1
